@@ -176,6 +176,9 @@
 
 
 
+
+
+
 <!-- START NEWS BAR -->
 <div class="container-fluid p-0 news-bar text-white">
     <div class="row p-0 m-0">
@@ -183,19 +186,19 @@
             <div class="ecm-primary font-weight-bold text-center align-middle"> NEWS </div>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Jennifer participates in panel at BMW Technology Days </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Prof. Rupp's announced as Member of the National Academy of Science Leopoldina </a>
             <br>
-            <small class="ecm-primary font-italic"> October 20, 2023 </small>
+            <small class="ecm-primary font-italic"> February 25, 2024 </small>
         </div>
         <div class="col-sm p-1 bg-dark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Jennifer sits on panel at 50th anniversary celebration of the European Patent Convention </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Prof. Rupp highlighted in Nature for tech trends insights </a>
             <br>
-            <small class="ecm-primary font-italic"> October 5, 2023 </small>
+            <small class="ecm-primary font-italic"> February 10, 2024 </small>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Prof. Rupp featured on Battery Generation Podcast </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> QKera: A Leap forward in Battery Technology </a>
             <br>
-            <small class="ecm-primary font-italic"> September 27, 2023 </small>
+            <small class="ecm-primary font-italic"> November, 2024 </small>
         </div>
     </div>
 </div>
