@@ -98,29 +98,33 @@
         </thead>
         <tbody>
 <!-- START NEWS -->
-<tr><td>
-    <a class="anchor" id="news3"></a>
-    <h6 class="mb-1">Prof. Rupp's announced as Member of the National Academy of Science Leopoldina</h6>
-    <div class='font-weight-light'>February 25, 2024</div>
-    <p><small>We are honored to announce Prof. Rupp's recent induction into the Leopoldina, the National Academy of Sciences in Germany. This prestigious recognition is a testament to Prof. Rupp's pioneering contributions to the scientific community and her relentless pursuit of knowledge. The Leopoldina is renowned for its role in promoting science for the benefit of society, and Prof. Rupp's inclusion highlights her significant impact in her field. Join us in celebrating this remarkable achievement!</small></p>
-</td></tr>
-
-<tr><td>
-    <a class="anchor" id="news2"></a>
-    <h6 class="mb-1">Prof. Rupp highlighted in Nature for tech trends insights</h6>
-    <div class='font-weight-light'>February 10, 2024</div>
-    <p><small>Prof. Rupp's insights on the future of energy storage have been featured in <a href="https://www.nature.com/articles/d41586-024-00325-z" target="_blank">Nature</a>. Jennifer's contribution is a testament to the impactful research conducted by our team and her recently founded battery company Qkera. We are proud to share this achievement with the scientific community and our partners.</small></p>
-</td></tr>
-
-<tr><td>
-    <a class="anchor" id="news2"></a>
-    <h6 class="mb-1">QKera: A Leap forward in Battery Technology</h6>
-    <div class='font-weight-light'>November, 2024</div>
-    <p><small>In November, we celebrated the founding of QKera by CEO Lisa Liu, CTO Andi Weis, and CSO Prof. Rupp. This venture promises to bring innovative solutions to the forefront of battery technology, stemming directly from our research. Keep an eye on <a href="https://qkera.com/" target="_blank">this space</a> for more updates!</small></p>
-</td></tr>
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Prof. Rupp's announced as Member of the National Academy of Science Leopoldina </h6> 
+    <div class='font-weight-light'>February 25, 2024</div>
+    <p><small>We are honored to announce Prof. Rupp's recent induction into the Leopoldina, the National Academy of Sciences in Germany. This prestigious recognition is a testament to Prof. Rupp's pioneering contributions to the scientific community and her relentless pursuit of knowledge. The Leopoldina is renowned for its role in promoting science for the benefit of society, and Prof. Rupp's inclusion highlights her significant impact in her field. Join us in celebrating this remarkable achievement!</small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
+    <h6 class="mb-1">Prof. Rupp highlighted in Nature for tech trends insights </h6> 
+    <div class='font-weight-light'>February 10, 2024</div>
+    <p><small>Prof. Rupp's insights on the future of energy storage have been featured in <a href = "https://www.nature.com/articles/d41586-024-00325-z" target = "_blank">Nature</a>. Jennifer's contribution is a testament to the impactful research conducted by our team and her recently founded battery company Qkera. We are proud to share this achievement with the scientific community and our partners.</small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news3"></a>
+    <h6 class="mb-1">QKera: A Leap forward in Battery Technology </h6> 
+    <div class='font-weight-light'>November, 2024</div>
+    <p><small>In November, we celebrated the founding of QKera by CEO Lisa Liu, CTO Andi Weis, and CSO Prof. Rupp. This venture promises to bring innovative solutions to the forefront of battery technology, stemming directly from our research. Keep an eye on <a href = "https://qkera.com/" target = "_blank">this space</a> for more updates!</small></p>
+
+</td></tr>
+
+<tr><td>
+    
     <h6 class="mb-1">Jennifer participates in panel at BMW Technology Days </h6> 
     <div class='font-weight-light'>October 20, 2023</div>
     <p><small>Jennifer took part in a bilateral panel talk at BMW Technology Day. There, she discussed the future of energy storage with BMW's Frank Weber (Board of Management for R&D), BMW's Ilka Horstmeier (Board of Management), as well as TUM President Thomas Hofmann.</small></p>
@@ -129,7 +133,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    
     <h6 class="mb-1">Jennifer sits on panel at 50th anniversary celebration of the European Patent Convention </h6> 
     <div class='font-weight-light'>October 5, 2023</div>
     <p><small>The European Patent Office celebrated 50 years! Chancellor Olaf Scholz and President of the European Commission von der Leyen gave speeches, and Jennifer took part in a panel to discuss Technologies for a Sustainable Future. More details and live streams of the event can be found <a href="https://www.epo.org/en/about-us/50-epc-anniversary/official-celebrations" target="_blank">here</a>.</small></p>
@@ -138,7 +142,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Prof. Rupp featured on Battery Generation Podcast </h6> 
     <div class='font-weight-light'>September 27, 2023</div>
     <p><small>Prof. Rupp was a guest on a recent <a href="https://www.youtube.com/watch?v=lr7-PzSr5SU" target="_blank">episode of the Battery Generation Podcast</a>, where she discussed the promise and current status of solid-state batteries with Patrick Rosen. The episode has been viewed over 20k times so far!</small></p>
